# M2S2_demo

./: .editorconfig  .envrc  .gitignore  .gitmodules  README.md  pylock.toml  pyproject.toml
abm_dataset_analysis/: download_data.py  eee_clustering.py  generate_stats.py
abm_dataset_analysis/data/: ground_truth_labels.csv  simulation_params.csv
abm_dataset_analysis/notebooks/: plot_results.ipynb
abm_dataset_analysis/scripts/: eee_prediction.py  generate_stats.py
colorectal_cancer_dataset_analysis/: classification_by_patient_pca.py  description_of_stats_used.md  download_data.py  generate_stats.py  plot_results.ipynb
colorectal_cancer_dataset_analysis/notebooks/: Reading_data_example.ipynb
colorectal_cancer_dataset_analysis/scripts/: classification_by_patient_pca.py  generate_stats.py
utils/: __init__.py  download_utils.py  generate_stats.py  logging.py  parallel.py  persistent_stats.py  plotting.py  read_stats.py
